# Rust-renderer

./: .gitignore  Cargo.toml  LICENSE  Motion-Graphics-App-Pitch-Deck-by-Slidesgo.pptx  README.md  mesh.rs
.github/workflows/: rust.yml
base/models/: ceiling.glb  ht2.glb  lava_floor.glb  mut19.glb  player.glb
base/ui/: test.cock
egui_glfw_gl/: Cargo.toml
egui_glfw_gl/examples/demo/: main.rs
egui_glfw_gl/src/: lib.rs  painter.rs
src/: animation.rs  animgraph.rs  audio.rs  camera.rs  face.rs  graphics.rs  graphics_util.rs  helpers.rs  keyboard.rs  lib.rs  light.rs  line_intersection.rs  main.rs  math.rs  matrix.rs  meshes.rs  mouse.rs  physics.rs  renderer.rs  shader.wgsl  shader1.wgsl  shaders.rs  skeletal_animation.rs  textures.rs  ui.rs  vector.rs
src/common_anim/: animation_move.rs  mod.rs
src/controllers/: camera_controller.rs  character_controller.rs  mod.rs
src/crates/renderer/: Cargo.toml
src/db_model/: auth.rs  cache.rs  db.rs  db_operations.rs  models.rs  websockets.rs
src/extraction/: mod.rs  uniform_manifold_dc.rs
src/firebase/: db_initialize.rs  db_operations.rs  mod.rs
src/generators/: height.rs  mod.rs  terrain.rs
src/gltf/: loader.rs  mod.rs
src/input/: event.rs  input.rs  keyboard.rs  mod.rs  mouse.rs
src/introsnd/: mod.rs
src/maps/: mod.rs  triggers.rs
src/mesh/: mesh_data.rs  mod.rs  vertex.rs
src/objects/: cube.rs  mod.rs  pyramid.rs  sphere.rs
src/optimisations/: DoubleIndexVec.rs  keyboardmap.rs  mod.rs
src/rend/: render.rs
src/renderer/: bindgroup.rs  camera.rs  depth_texture.rs  error.rs  light.rs  mesh.rs  (+5 more)
(+26 files in other folders)
